--- a/bali-scooter-booking/index.html
+++ b/bali-scooter-booking/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://forms.office.com/r/PrJ8ZkeZLn">
     <title>Redirecting...</title>
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Bali Scooter Booking" />
+    <meta property="og:description" content="You know what to do" />
+    <meta property="og:url" content="https://austinknight.co/bali-scooter-booking" />
+    <meta property="og:image" content="https://austinknight.co/bali-scooter-booking/aaj_scooters.jpg" />
+
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://forms.office.com/r/PrJ8ZkeZLn">click here</a>.</p>
+    <p>Give it a sec, stop being impatient <a href="https://forms.office.com/r/PrJ8ZkeZLn">click here</a>.</p>
 </body>
 </html>
+
