--- a/index.html
+++ b/index.html
@@ -14,43 +14,52 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     -->
     <!-- Styles -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
   </head>
   <body>
-  <!-- Hidden -->
-     <!--<div class="socilas">
-      <a href="https://www.facebook.com/xx" target="_blank">
-        <img src="img/facebook.svg" alt="">
-      </a>
-      <a href="https://twitter.com/xx" target="_blank">
-        <img src="img/twitter.svg" alt="">
-      </a>
-      <a href="https://www.instagram.com/xx" target="_blank">
-        <img src="img/instagram.svg" alt="">
-      </a>
-    </div> -->
+     <div class="socilas">
+      <div class="container">
+        <h2>Want to hear more?</h2>
+        <form id="signup-form" action="https://formspree.io/f/xanwrvew" method="POST">
+          <div class="form-group">
+            <input type="email" name="email" id="email" placeholder="Your Email" required>
+          </div>
+          <!-- Spam Protection Honeypot -->
+          <input type="text" name="_gotcha" style="display:none">
+          <!-- Redirect After Submission -->
+          <input type="hidden" name="_redirect" value="https://austinknight.co/index.html">
+          <input type="submit" value="Sign Up">
+        </form>
+      </br>
+        </div>
+        <!-- <a href="https://www.facebook.com/xx" target="_blank">
+          <img src="assets/img/facebook.svg" alt="">
+        </a>
+        <a href="https://twitter.com/xx" target="_blank">
+          <img src="assets/img/twitter.svg" alt="">
+        </a>
+        <a href="https://www.instagram.com/xx" target="_blank">
+          <img src="assets/img/instagram.svg" alt="">
+        </a> -->
+      </div>
+    </div>
 
     <h1 class="disable">
+    	<span>N</span>
+    	<span>E</span>
+    	<span>X</span>
+    	<span>T</span>
+    	<span>D</span>
     	<span>A</span>
-    	<span>U </span>
-    	<span>S</span>
-    	<span>T</span>
-    	<span>I</span>
-    	<span>N</span>
-    	<span> </span>
-    	<span>K</span>
-    	<span>N</span>
-    	<span>I</span>
-    	<span>G </span>
-    	<span>H</span>
-    	<span>T</span>
+    	<span>Y</span>
     </h1>
+
     <canvas id="c"></canvas>
 
     <!-- Scripts -->
-    <script type="text/javascript" src="js/anime.min.js"></script>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="assets/js/anime.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
 </html>
