--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="content">
     <section id="title">
       <h1>NextDay</h1>
-      <h2>be ready</h2>
+      <!-- <h2>be ready</h2> -->
     </section>
     <section id="signup">
       <h2>want to hear more?</h2>
