--- a/index.html
+++ b/index.html
@@ -1,39 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NEXTDAY</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-<body>
-  <div class="content">
-    <section id="title">
-      <h1>NextDay</h1>
-      <h2>be ready</h2>
-    </section>
-    <section id="signup">
-      <h2>want to hear more?</h2>
-      <form id="signup-form" action="https://formspree.io/f/xanwrvew" method="POST">
-        <div class="form-group">
-          <input type="email" name="email" id="email" placeholder="your email" required>
+<html>
+  <head>
+    <!-- Meta Data -->
+    <title>Austin Knight</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- Favicons-->
+    <!--
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    -->
+    <!-- Styles -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+
+  </head>
+  <body>
+     <div class="socilas">
+      <div class="container">
+        <h2>Want to hear more?</h2>
+        <form id="signup-form" action="https://formspree.io/f/xanwrvew" method="POST">
+          <div class="form-group">
+            <input type="email" name="email" id="email" placeholder="Your Email" required>
+          </div>
+          <!-- Spam Protection Honeypot -->
+          <input type="text" name="_gotcha" style="display:none">
+          <!-- Redirect After Submission -->
+          <input type="hidden" name="_redirect" value="https://austinknight.co/index.html">
+          <input type="submit" value="Sign Up">
+        </form>
+      </br>
         </div>
-        <div class="form-group">
-          <input type="submit" value="sign up">
-        </div>
-      </form>
-    </section>
-    <!-- <section id="socials">
-      <a href="https://www.facebook.com/xx" target="_blank">
+        <!-- <a href="https://www.facebook.com/xx" target="_blank">
           <img src="assets/img/facebook.svg" alt="">
-      </a>
-      <a href="https://twitter.com/xx" target="_blank">
-        <img src="assets/img/twitter.svg" alt="">
-      </a>
-      <a href="https://www.instagram.com/xx" target="_blank">
-        <img src="assets/img/instagram.svg" alt="">
-      </a>
-    </section> -->
-</div>
-</body>
+        </a>
+        <a href="https://twitter.com/xx" target="_blank">
+          <img src="assets/img/twitter.svg" alt="">
+        </a>
+        <a href="https://www.instagram.com/xx" target="_blank">
+          <img src="assets/img/instagram.svg" alt="">
+        </a> -->
+      </div>
+    </div>
+
+    <h1 class="disable">
+    	<span>N</span>
+    	<span>E</span>
+    	<span>X</span>
+    	<span>T</span>
+    	<span>D</span>
+    	<span>A</span>
+    	<span>Y</span>
+    </h1>
+
+    <canvas id="c"></canvas>
+
+    <!-- Scripts -->
+    <script type="text/javascript" src="assets/js/anime.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
+  </body>
 </html>
